resources/assets/stylesheets/scss/contents.scss
.contents-widget {
    margin: 10px;

    .content-items {
        grid-template-columns: repeat(auto-fit, minmax(min(180px, 100%), 1fr));
        grid-gap: 5px;
        max-width: none;
        width: 100%;

        .content-item {
            height: 100px;

            .content-item-link {
                height: 90px;
                padding: 5px;

                .content-item-img-wrapper {
                    margin: 5px;
                    margin-right: 10px;
                    margin-top: 0;
                    width: 32px;
                }

                .content-item-text {
                    .content-item-title {
                        font-size: 1.8rem;
                        margin-bottom: 5px;
                    }

                    .content-item-description {
                        font-size: small;
                    }
                }
            }
        }
    }
}

.content-items {
    display: grid;
    grid-template-columns: repeat(auto-fit, 270px);
    grid-gap: 15px;
    list-style: none;
    padding: 0;

    .content-item {
        background-color: $dark-gray-color-5;
        border: solid thin $light-gray-color-40;
        height: 130px;
        padding-bottom: 10px;
        padding-top: 10px;

        .content-item-link {
            color: unset;
            display: flex;
            height: 130px;
            padding: 10px;
            transition: 0.5s;

            .content-item-img-wrapper {
                margin: 15px;
                margin-right: 20px;
                margin-top: 0;
                width: 64px;
            }

            .content-item-text {
                padding-top: -2px;

                .content-item-title {
                    color: $base-color;
                    font-size: 2rem;
                }
            }

        }

        &:hover {
            background-color: $white;
            color: unset;

            .content-item-link {
                .content-item-text {
                    .content-item-title {
                        color: $red;
                    }
                }
            }
        }

    }
}

@media (max-width: 820px) {
    .content-items {
        grid-template-columns: 100%;
    }
}

